fhg-1326: Header change as per new dfe requirment

--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/Shared/_Layout.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
     @*<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />*@
     @*<link rel="stylesheet" href="~/WebUI.styles.css" asp-append-version="true" />*@
 </head>
-<body class="govuk-template__body ">
+<body class="govuk-template__body dfe-template__body">
    <script>
             document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled');
     </script>
