--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/styles/scss/_global.scss
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/styles/scss/_global.scss
@@ -8,3 +8,9 @@
 @import "pages/InPersonWhere";
 @import "pages/delivery-type";
 @import "pages/WhatLanguage";
+
+
+//Overrides
+
+@import "dfe-overrides/header";
+@import "dfe-overrides/main";
