removed the services

--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/Shared/_Header.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/Shared/_Header.cshtml
@@ -14,7 +14,7 @@
                 <span class="govuk-header__logotype-text">|</span>
                 <a href="/" class="govuk-header__link govuk-header__link--homepage">
                     <span class="govuk-header__product-name">
-                        Connect families to support services
+                        Connect families to support
                     </span>
                 </a>
             </div>
