--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/UploadSpreadsheetData.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/UploadSpreadsheetData.cshtml
@@ -3,6 +3,8 @@
 @{
 }
 
+<a asp-page="/OrganisationAdmin/Welcome" asp-route-organisationId="@Model.OrganisationId" class="govuk-back-link" data-testid="back-button">Back</a>
+
 <main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content" role="main">
     <form enctype="multipart/form-data" method="post">
         <input asp-for="@Model.OrganisationId" type="hidden">
