--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/Welcome.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/Welcome.cshtml
@@ -3,10 +3,7 @@
 @{
 }
 
-@*<a asp-page="/OrganisationAdmin/OrganisationDetail" asp-route-id="@Model.OrganisationViewModel.Id" class="govuk-back-link">Back</a>*@
-
-
-
+<a asp-page="@Model.LastPage" class="govuk-back-link">Back</a>
 
 <main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content" role="main">
 
