--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/UploadSpreadsheetData.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/UploadSpreadsheetData.cshtml
@@ -13,12 +13,12 @@
             <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
             <strong class="govuk-warning-text__text">
                 <span class="govuk-warning-text__assistive">Warning</span>
-                This file upload only supports .xlsx and .xls spreadsheets.
+                This file upload only supports .xlsm, .xlsx and .xls spreadsheets.
             </strong>
         </div>
         <div class="govuk-form-group">
             <label class="govuk-label">
-                Upload an .xlsx or .xls excel spread sheet.
+                Upload an .xlsm, .xlsx or .xls excel spread sheet.
             </label>
             <input class="govuk-file-upload" asp-for="FileUpload.FormFile" type="file">
         </div>
