--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/CheckServiceDetails.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/CheckServiceDetails.cshtml
@@ -24,7 +24,17 @@
         <div class="govuk-grid-column-two-thirds">
 
             <fieldset class="govuk-fieldset">
+
                 <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+                    <span class="govuk-fieldset__heading">
+                        @Model.OrganisationViewModel.Name
+                    </span>
+                </legend>
+
+                
+                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+
+
                     @if (Model.UserFlow == "ManageService")
                     {
                         <span class="govuk-fieldset__heading">
@@ -39,13 +49,292 @@
                     }
                 </legend>
 
+                 <!-- SPreadsheet fields -->
+                <dl class="govuk-summary-list govuk-!-margin-bottom-9" id="replace-commas">
+                    
+                    <!-- Service unique identifier -->
+                    <div class="govuk-summary-list__row">
+                        <dt class="govuk-summary-list__key">
+                            Service unique identifier
+                        </dt>
+                        <dd class="govuk-summary-list__value" data-testid="">
+                            @Model.OrganisationViewModel.Id
+                        </dd>
+                    </div>
+                    
+                    <!-- Local authority -->
+                    <div class="govuk-summary-list__row">
+                        <dt class="govuk-summary-list__key">
+                            Local authority
+                        </dt>
+                        <dd class="govuk-summary-list__value" >
+                            @Model.OrganisationViewModel.Name
+                        </dd>
+                    </div>
+
+                    <!-- Organisation type -->
+                    <div class="govuk-summary-list__row">
+                        <dt class="govuk-summary-list__key">
+                            Organisation type
+                        </dt>
+                        <dd class="govuk-summary-list__value" >
+                            @Model.OrganisationViewModel.Type
+                        </dd>
+                    </div>
+
+                    <!-- Name of organisation -->
+                    <div class="govuk-summary-list__row">
+                        <dt class="govuk-summary-list__key">
+                            Name of organisation
+                        </dt>
+                        <dd class="govuk-summary-list__value" >
+                            @Model.OrganisationViewModel.Name
+                        </dd>
+                    </div>
+
+                    <!-- Name of service -->
+                    <div class="govuk-summary-list__row">
+                        <dt class="govuk-summary-list__key">
+                            Name of service
+                        </dt>
+                        <dd class="govuk-summary-list__value" >
+                            @Model.OrganisationViewModel.ServiceName
+                        </dd>
+                    </div>
+
+                    <!-- Delivery method -->
+                    <div class="govuk-summary-list__row">
+                        <dt class="govuk-summary-list__key">
+                            Delivery method
+                        </dt>
+                        <dd class="govuk-summary-list__value">
+                            @for (int i = 0; i < Model.ServiceDeliverySelection.Count(); i++)
+                            {
+                                @if (i > 0)
+                                {
+                                    <span>&#44;&nbsp;</span>
+                                }
+                                @Model.ServiceDeliverySelection[i]
+                                ;
+                            }
+                        </dd>
+                    </div>
+
+                    <!-- Location name -->
+                    <div class="govuk-summary-list__row">
+                        <dt class="govuk-summary-list__key">
+                            Location name
+                        </dt>
+                        <dd class="govuk-summary-list__value" >
+                            @Model.OrganisationViewModel.LocationName
+                        </dd>
+                    </div>
+
+                    <!-- Location description -->
+                    <div class="govuk-summary-list__row">
+                        <dt class="govuk-summary-list__key">
+                            Location description
+                        </dt>
+                        <dd class="govuk-summary-list__value" >
+                            @Model.OrganisationViewModel.LocationDescription
+                        </dd>
+                    </div>
+
+                    <!-- Address line 1 -->
+                    <div class="govuk-summary-list__row">
+                        <dt class="govuk-summary-list__key">
+                            Address line 1
+                        </dt>
+                        <dd class="govuk-summary-list__value" >
+                            @Model.Address_1
+                        </dd>
+                    </div>
+
+                    <!-- Address line 2 -->
+                    <div class="govuk-summary-list__row">
+                        <dt class="govuk-summary-list__key">
+                            Address line 2
+                        </dt>
+                        <dd class="govuk-summary-list__value" >
+                            @Model.Address_2
+                        </dd>
+                    </div>
+
+                    <!-- Town or City -->
+                    <div class="govuk-summary-list__row">
+                        <dt class="govuk-summary-list__key">
+                            Town or City
+                        </dt>
+                        <dd class="govuk-summary-list__value" >
+                            @Model.OrganisationViewModel.City
+                        </dd>
+                    </div>
+
+                    <!-- County -->
+                    <div class="govuk-summary-list__row">
+                        <dt class="govuk-summary-list__key">
+                            County
+                        </dt>
+                        <dd class="govuk-summary-list__value" >
+                            @Model.OrganisationViewModel.State_province
+                        </dd>
+                    </div>
+
+                    <!-- Postcode -->
+                    <div class="govuk-summary-list__row">
+                        <dt class="govuk-summary-list__key">
+                            Postcode
+                        </dt>
+                        <dd class="govuk-summary-list__value" >
+                            @Model.OrganisationViewModel.Postal_code
+                        </dd>
+                    </div>
+
+                    <!-- Email -->
+                    <div class="govuk-summary-list__row">
+                        <dt class="govuk-summary-list__key">
+                            Contact email
+                        </dt>
+                        <dd class="govuk-summary-list__value" >
+                            @Model.OrganisationViewModel.Email
+                        </dd>
+                    </div>
+
+                    <!-- Contact phone -->
+                    <div class="govuk-summary-list__row">
+                        <dt class="govuk-summary-list__key">
+                            Contact phone
+                        </dt>
+                        <dd class="govuk-summary-list__value" >
+                            @Model.OrganisationViewModel.Telephone
+                        </dd>
+                    </div>
+
+                    <!-- Website -->
+                    <div class="govuk-summary-list__row">
+                        <dt class="govuk-summary-list__key">
+                            Website
+                        </dt>
+                        <dd class="govuk-summary-list__value" >
+                            @Model.OrganisationViewModel.Website
+                        </dd>
+                    </div>
+
+                    <!-- Contact sms -->
+                    <div class="govuk-summary-list__row">
+                        <dt class="govuk-summary-list__key">
+                            Contact sms
+                        </dt>
+                        <dd class="govuk-summary-list__value" >
+                            @Model.OrganisationViewModel.Textphone
+                        </dd>
+                    </div>
+
+                    <!-- Sub-category -->
+                    <div class="govuk-summary-list__row">
+                        <dt class="govuk-summary-list__key">
+                            Sub-category
+                        </dt>
+                        <dd class="govuk-summary-list__value">
+                            @for (int i = 0, j = 0; i < Model.SelectedTaxonomy.Count(); i++)
+                            {
+                                if (!string.IsNullOrEmpty(Model.SelectedTaxonomy[i].Parent))
+                                {
+                                    if (j++ > 0)
+                                    {
+                                        <span>&#44;&nbsp;</span>
+                                    }
+                                    @Model.SelectedTaxonomy[i].Name
+                                    ;
+                                }
+                            }
+                        </dd>
+                    </div>
+
+                    <!-- Cost (£ in pounds) -->
+                    <div class="govuk-summary-list__row">
+                        <dt class="govuk-summary-list__key">
+                            Cost (£ in pounds)
+                        </dt>
+                        <dd class="govuk-summary-list__value" >
+                            <span>£</span> @Model?.Cost <span>per</span> @Model?.OrganisationViewModel?.PayUnit
+                        </dd>
+                    </div>
+
+                    <!-- Language -->
+                    <div class="govuk-summary-list__row">
+                        <dt class="govuk-summary-list__key">
+                            Language
+                        </dt>
+                        <dd class="govuk-summary-list__value">
+                            @for (int i = 0; i < @Model?.OrganisationViewModel?.Languages?.Count(); i++)
+                            {
+                                @if (i > 0)
+                                {
+                                    <span>&#44;</span>
+                                }
+                                @Model.OrganisationViewModel?.Languages?[i]
+                            }
+                        </dd>
+                    </div>
+
+                    <!-- Age from -->
+                    <div class="govuk-summary-list__row">
+                        <dt class="govuk-summary-list__key">
+                            Age
+                        </dt>
+                        <dd class="govuk-summary-list__value" id="test">
+                            @Model?.OrganisationViewModel?.MinAge years old to @Model?.OrganisationViewModel?.MaxAge years old
+                        </dd>
+                    </div>
+
+                    <!-- Opening hours description -->
+                    <div class="govuk-summary-list__row">
+                        <dt class="govuk-summary-list__key">
+                            Opening hours description
+                        </dt>
+                        <dd class="govuk-summary-list__value">
+                            @for (int i = 0; i < Model?.OrganisationViewModel?.RegularSchedules?.Count(); i++)
+                            {
+                                if (!string.IsNullOrEmpty(Model?.OrganisationViewModel?.RegularSchedules[i]))
+                                {
+
+                                        <span>&#44;&nbsp;</span>
+
+                                    @Model?.OrganisationViewModel?.RegularSchedules[i]
+                                    ;
+                                }
+                            }
+                        </dd>
+                    </div>
+
+                    <!-- More details (service description) -->
+                    <div class="govuk-summary-list__row">
+                        <dt class="govuk-summary-list__key">
+                            More details (service description)
+                        </dt>
+                        <dd class="govuk-summary-list__value" >
+                            @Model?.OrganisationViewModel?.ServiceDescription
+                        </dd>
+                    </div>             
+
+                </dl>
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <!-- END - SPreadsheet fields -->
+
+
+                <!-- Legacy CheckServcieDetails fields -->
                 <dl class="govuk-summary-list govuk-!-margin-bottom-9" id="replace-commas">
                     <div class="govuk-summary-list__row">
                         <dt class="govuk-summary-list__key">
                             Name
                         </dt>
                         <dd class="govuk-summary-list__value" data-testid="service-name">
-                            @Model.OrganisationViewModel.ServiceName
+                            @Model.OrganisationViewModel?.ServiceName
                         </dd>
                         <dd class="govuk-summary-list__actions">
                             @*<a class="govuk-link" asp-page="/OrganisationAdmin/ServiceName" asp-route-strOrganisationViewModel="@Model.StrOrganisationViewModel">*@
@@ -59,7 +348,7 @@
                             What does it help with?
                         </dt>
                         <dd class="govuk-summary-list__value">
-                            @for (int i = 0, j=0; i < Model.SelectedTaxonomy.Count(); i++)
+                            @for (int i = 0, j = 0; i < Model.SelectedTaxonomy.Count(); i++)
                             {
                                 if (!string.IsNullOrEmpty(Model.SelectedTaxonomy[i].Parent))
                                 {
@@ -131,23 +420,33 @@
                             <dd class="govuk-summary-list__value">
                                 @if (!string.IsNullOrEmpty(Model.Address_1))
                                 {
-                                    @Model.Address_1<br />
+                                    @Model.Address_1
+
+                                    <br />
                                 }
                                 @if (!string.IsNullOrEmpty(Model.Address_2))
                                 {
-                                    @Model.Address_2<br />
+                                    @Model.Address_2
+
+                                    <br />
                                 }
                                 @if (!string.IsNullOrEmpty(@Model.OrganisationViewModel.City))
                                 {
-                                    @Model.OrganisationViewModel.City<br />
+                                    @Model.OrganisationViewModel.City
+
+                                    <br />
                                 }
                                 @if (!string.IsNullOrEmpty(@Model.OrganisationViewModel.State_province))
                                 {
-                                    @Model.OrganisationViewModel.State_province<br />
+                                    @Model.OrganisationViewModel.State_province
+
+                                    <br />
                                 }
                                 @if (!string.IsNullOrEmpty(@Model.OrganisationViewModel.Postal_code))
                                 {
-                                    @Model.OrganisationViewModel.Postal_code<br />
+                                    @Model.OrganisationViewModel.Postal_code
+
+                                    <br />
                                 }
                             </dd>
                             <dd class="govuk-summary-list__actions">
@@ -158,24 +457,24 @@
                             </dd>
                         </div>
                     }
-@*
+                    @*
                     @if (@Model.OrganisationViewModel?.Familychoice == "Yes")
                     {
-                        <div class="govuk-summary-list__row">
-                            <dt class="govuk-summary-list__key">
-                                Can families choose location?
-                            </dt>
-                            <dd class="govuk-summary-list__value">
-                                @Model.OrganisationViewModel.Familychoice
-                            </dd>
-                            <dd class="govuk-summary-list__actions">
-                                <a class="govuk-link" asp-page="/OrganisationAdmin/OfferAtFamiliesPlace" data-testid="change-offeratfamiliesplace">
-                                    Change<span class="govuk-visually-hidden">family choice</span>
-                                </a>
-                            </dd>
-                        </div>
+                    <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                    Can families choose location?
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                    @Model.OrganisationViewModel.Familychoice
+                    </dd>
+                    <dd class="govuk-summary-list__actions">
+                    <a class="govuk-link" asp-page="/OrganisationAdmin/OfferAtFamiliesPlace" data-testid="change-offeratfamiliesplace">
+                    Change<span class="govuk-visually-hidden">family choice</span>
+                    </a>
+                    </dd>
+                    </div>
                     }
-*@
+                    *@
                     <div class="govuk-summary-list__row">
                         <dt class="govuk-summary-list__key">
                             For children and young people?
