--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/ViewServices.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/ViewServices.cshtml
@@ -21,6 +21,7 @@
                 <caption class="govuk-table__caption govuk-table__caption--m">Your services</caption>
                 <thead class="govuk-table__head">
                     <tr class="govuk-table__row">
+                        <th scope="col" class="govuk-table__header">ServiceType</th>
                         <th scope="col" class="govuk-table__header">Service</th>
                         <th scope="col" class="govuk-table__header"></th>
                     </tr>
@@ -30,6 +31,8 @@
                      {
                         var item = @Model.Services[i];
                         <tr class="govuk-table__row">
+                            @if(@item.ServiceType.Id == "1"){<td class="govuk-table__cell" >IS</td>}
+                            @if(@item.ServiceType.Id == "2"){<td class="govuk-table__cell" >FX</td>}
                             <td class="govuk-table__cell" data-testid=@item.Name.ToLower().Replace(" ", "")>@item.Name</td>
                             <td class="govuk-table__cell" style="text-align: right">
                                 <a asp-page-handler="RedirectToDetailsPage" asp-route-orgId="@Model.OrganisationViewModel.Id.ToString()" asp-route-serviceid="@item.Id" class="govuk-!-margin-right-1" data-testid=@item.Name.ToLower().Replace(" ", "")-view >View</a>
