--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/CheckServiceDetails.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/CheckServiceDetails.cshtml
@@ -377,7 +377,7 @@
                             Name
                         </dt>
                         <dd class="govuk-summary-list__value" data-testid="service-name">
-                            @Model.OrganisationViewModel?.ServiceName
+                            @Model?.OrganisationViewModel?.ServiceName
                         </dd>
                         <dd class="govuk-summary-list__actions">
                             @*<a class="govuk-link" asp-page="/OrganisationAdmin/ServiceName" asp-route-strOrganisationViewModel="@Model.StrOrganisationViewModel">*@
@@ -391,7 +391,7 @@
                             What does it help with?
                         </dt>
                         <dd class="govuk-summary-list__value">
-                            @for (int i = 0, j = 0; i < Model.SelectedTaxonomy.Count(); i++)
+                            @for (int i = 0, j = 0; i < Model?.SelectedTaxonomy.Count(); i++)
                             {
                                 if (!string.IsNullOrEmpty(Model.SelectedTaxonomy[i].Parent))
                                 {
@@ -416,7 +416,7 @@
                             How can families use it?
                         </dt>
                         <dd class="govuk-summary-list__value">
-                            @for (int i = 0; i < Model.ServiceDeliverySelection.Count(); i++)
+                            @for (int i = 0; i < Model?.ServiceDeliverySelection.Count(); i++)
                             {
                                 @if (i > 0)
                                 {
@@ -454,7 +454,7 @@
                     </dd>
                     </div>*@
 
-                    @if (@Model.OrganisationViewModel?.InPersonSelection?.Contains("Our own location") == true)
+                    @if (@Model?.OrganisationViewModel?.InPersonSelection?.Contains("Our own location") == true)
                     {
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
