--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/SignIn.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/SignIn.cshtml
@@ -12,9 +12,16 @@
             <h1 class="govuk-heading-xl">Sign in to your account</h1>
 
             <form method="post">
-                <div class="govuk-form-group">
+                <div class="govuk-form-group @(ModelState.IsValid == false ? "govuk-form-group--error" : "")">
                     <label for="password" class="govuk-label">Password</label>
-                    <input type="password" name="password" id="password" class="govuk-input govuk-!-width-one-half" value="@Model.Password" autocomplete="current-password">
+                    @if (ModelState.IsValid == false)
+                    {
+                        <p class="govuk-error-message">
+                            <span class="govuk-visually-hidden">Error:</span>
+                            <span asp-validation-for="@Model.Password"></span>
+                        </p>
+                    }
+                    <input type="password" name="password" id="password" class="govuk-input govuk-!-width-one-half @(ModelState.IsValid == false ? "govuk-input--error" : "")" value="@Model.Password" autocomplete="current-password">
                 </div>
                 <button type="submit" class="govuk-button">
                     Continue
