Revert "work in progress"
This reverts commit 00b88a95eba29d8be8d01036f575fc37111592d5.

--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/LocalOfferDetail.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/LocalOfferDetail.cshtml
@@ -56,16 +56,16 @@
           </ul>
         </li>
 
-        @if(@Model.LocalOffer.ContactLinks != null)
+        @if(@Model.LocalOffer.Contacts != null)
         {
              <li>
               <h2 class="app-task-list__section">
                 Contact
               </h2>
-              @foreach(var contactItem in @Model.LocalOffer.ContactLinks)
+              @foreach(var contactItem in @Model.LocalOffer.Contacts)
               {
                   <ul class="app-task-list__items no-bullets">
-                     <li><label>Name: </label>@contactItem.Contact.Title &nbsp; @contactItem.Contact.Name</li>
+                     <li><label>Name: </label>@contactItem.Title &nbsp; @contactItem.Name</li>
                         @*<li>@Model.LocalOffer.Contact.AddressLine1</li>
                         <li>@Model.LocalOffer.Contact.AddressLine2</li>
                         <li>@Model.LocalOffer.Contact.TownOrCity</li>
