--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/Error/404.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/Error/404.cshtml
@@ -3,22 +3,17 @@
     ViewData["Title"] = "Page not found";
 }
 
-<div class="govuk-width-container">
-    <main class="govuk-main-wrapper govuk-main-wrapper--l" id="main-content" role="main">
-        <div class="govuk-grid-row">
-            <div class="govuk-grid-column-two-thirds">
-                <h1 class="govuk-heading-l">Page not found</h1>
-                <p>
-                    If you typed the web address, check it is correct.
-                </p>
-                <p>
-                    If you pasted the web address, check you copied the entire address.
-                </p>
-                @*todo: where to send them?*@
-@*                <p>
-                    If the web address is correct or you selected a link or button, <a href="#" class="govuk-link">contact the 'Find local family support and services' helpline</a> if you need to speak to someone.
-                </p>*@
-            </div>
-        </div>
-    </main>
+<div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+        <h1 class="govuk-heading-l">Page not found</h1>
+        <p>
+            If you typed the web address, check it is correct.
+        </p>
+        <p>
+            If you pasted the web address, check you copied the entire address.
+        </p>
+        <p>
+            If the problem continues, email us at <a href="mailto:find-support-for-your-family.service@education.gov.uk">find-support-for-your-family.service@education.gov.uk</a>
+        </p>
+    </div>
 </div>
