removed the back button

--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/Welcome.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/Welcome.cshtml
@@ -3,7 +3,7 @@
 @{
 }
 
-<a asp-page="@Model.LastPage" class="govuk-back-link">Back</a>
+<a asp-page="/OrganisationAdmin/ChooseOrganisation" class="govuk-back-link">Back</a>
 
 <main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content" role="main">
 
